syntax = "proto3";

package menu;

option go_package = "./pb";

service MenuService {
  rpc CreateMenuItem(CreateMenuItemRequest) returns (CreateMenuItemResponse);
  rpc GetMenuItems(GetMenuItemsRequest) returns (GetMenuItemsResponse);
  rpc UpdateMenuItem(UpdateMenuItemRequest) returns (UpdateMenuItemResponse);
  rpc DeleteMenuItem(DeleteMenuItemRequest) returns (DeleteMenuItemResponse);
}

message CreateMenuItemRequest {
  string name = 1;
  string image_url = 2;
  string description = 3;
  float price = 4;
  string item_status = 5;
}

message CreateMenuItemResponse {
  string status = 1;
}

// Filter by item_status and price range
message GetMenuItemsRequest {
  optional string name = 1;
  optional string item_status = 2;
  optional float min_price = 3;
  optional float max_price = 4;
}

message GetMenuItemsResponse {
  repeated MenuItem menu_items = 1;
}

message MenuItem {
  string id = 1;
  string name = 2;
  string image_url = 3;
  string description = 4;
  float price = 5;
}

message UpdateMenuItemRequest {
  string id = 1;
  optional string name = 2;
  optional string image_url = 3;
  optional string description = 4;
  optional float price = 5;
  optional string item_status = 6;
}

message UpdateMenuItemResponse {
  string id = 1;
  string status = 2;
  optional string item_status = 3;
}

message DeleteMenuItemRequest {
  string id = 1;
}

message DeleteMenuItemResponse {
  string status = 1;
}